<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/first_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_alignParentLeft="true"
        android:text="@string/item_string_name">
    </TextView>

    <TextView
        android:id="@+id/second_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/item_string_second_name"
        android:layout_toEndOf="@id/first_name_text_view"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/first_name_text_view">

    </TextView>

    <TextView
        android:id="@+id/tell_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/item_string_phone_number"
        android:layout_below="@id/first_name_text_view"
        android:layout_marginLeft="5dp">

    </TextView>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/item_string_email"
        android:layout_below="@id/tell_number"
        android:layout_marginLeft="5dp">

    </TextView>

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/item_string_age"
        android:layout_below="@id/email"
        android:layout_marginLeft="5dp">

    </TextView>

    <TextView
        android:id="@+id/tell_number_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text=""
        android:layout_toRightOf="@id/tell_number"
        android:layout_alignTop="@id/tell_number">



    </TextView>

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text=""
        android:layout_toRightOf="@id/email"
        android:layout_below="@id/tell_number">


    </TextView>

    <TextView
        android:id="@+id/age_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text=""
        android:layout_toRightOf="@id/age"
        android:layout_below="@id/email"

        >

    </TextView>



</RelativeLayout>
